objects/kugo2p__KitBundleMember__c.object
<CustomObject>
    <description>Kugamon - Related object to Additional Product Info that stores member Products and/or Services for a given Kit/Bundle.</description>
    <fields>
        <fullName>kugo2p__AllowQuantityChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Kit/Bundle Member Lines only. Allows Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</description>
        <inlineHelpText>For Kit/Bundle Member Lines only. Allows Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</inlineHelpText>
        <label>Edit Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Default Quantity value. Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</description>
        <inlineHelpText>Default Quantity value. Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__ReferenceKitBundle__c</fullName>
        <label>Kit/Bundle</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Kit/Bundle Members</relationshipLabel>
        <relationshipName>KitBundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__ReferenceMemberProductService__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Product/Service</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Member of Kit/Bundles</relationshipLabel>
        <relationshipName>KitsBundles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Member is included in Kit/Bundle. Cannot be removed.</description>
        <inlineHelpText>Member is included in Kit/Bundle. Cannot be removed.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Kit/Bundle Member</label>
    <listViews>
        <fullName>kugo2p__AllMembers</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__ReferenceKitBundle__c</columns>
        <columns>kugo2p__ReferenceMemberProductService__c</columns>
        <columns>kugo2p__Quantity__c</columns>
        <columns>kugo2p__AllowQuantityChange__c</columns>
        <columns>kugo2p__Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Kit/Bundle Members</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Kit/Bundle Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit/Bundle Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__InactiveMember</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__ReferenceMemberProductService__r.kugo2p__Active__c = false</errorConditionFormula>
        <errorDisplayField>kugo2p__ReferenceMemberProductService__c</errorDisplayField>
        <errorMessage>Kit/Bundle Member Product is Not Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__KitandMemberCannotHaveSameName</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__ReferenceMemberProductService__c = kugo2p__ReferenceKitBundle__c</errorConditionFormula>
        <errorDisplayField>kugo2p__ReferenceMemberProductService__c</errorDisplayField>
        <errorMessage>Kit/Bundle and Member Product Cannot Have the Same Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MemberCannotBeKit</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__ReferenceMemberProductService__r.kugo2p__KitBundle__c = true</errorConditionFormula>
        <errorDisplayField>kugo2p__ReferenceMemberProductService__c</errorDisplayField>
        <errorMessage>Member Cannot Be a Kit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MustBeKit</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__ReferenceKitBundle__r.kugo2p__KitBundle__c = false &amp;&amp; TEXT(kugo2p__ReferenceKitBundle__r.kugo2p__ConfigurationMethod__c) != &apos;Kit/Bundle&apos;</errorConditionFormula>
        <errorDisplayField>kugo2p__ReferenceKitBundle__c</errorDisplayField>
        <errorMessage>Kit/Bundle Must Be Checked As A Kit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__QuantityMustBeGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__Quantity__c &lt;=0</errorConditionFormula>
        <errorDisplayField>kugo2p__ReferenceMemberProductService__c</errorDisplayField>
        <errorMessage>Kit/Bundle Member Must Have A Quantity Greater Than 0</errorMessage>
    </validationRules>
</CustomObject>